# InsightAgent

./: .envrc.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/agents/: insight_agent.py
app/agents/tools/: get_transactions.py  tools.py
app/routers/: insight.py
app/utils/: bunq_api.py
