[project]
name = "insight-agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.3",
    "beautifulsoup4>=4.13.4",
    "bunq-sdk>=1.28.0",
    "fastapi[standard]>=0.112.1",
    "google-genai>=1.13.0",
    "importlib-metadata>=8.7.0",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "packaging>=25.0",
    "pinecone<6",
    "pinecone-text<6",
    "playwright>=1.52.0",
    "pypdf>=5.4.0",
    "sqlalchemy>=2.0.40",
    "tantivy>=0.22.2",
    "uvicorn>=0.30.6",
]
